--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -120,7 +120,9 @@ os_base_packages_RedHat_7: # 版本7需要安装的系统组件。
   - 'numactl'
   - 'policycoreutils-python'
   - 'procmail'
+  - 'python-setuptools'
   - 'python2-jmespath'
+  - 'python3'
   - 'strace'
   - 'tcpdump'
   - 'tcpflow'
