--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -216,16 +216,14 @@ os_win_gpo_audit_policy: # 组审计策略。
   - 'Privilege use'
 
 # 入侵检测系统参数 #
-os_ossec_version: '3.13.2-1' # WAZUH代理版本。
+os_ossec_version: '4.0.4-1' # WAZUH代理版本。
 os_ossec_managers: # WAZUH管理器参数。
   address:
     - 'demo-prd-infra-hids-ossec-worker.service.dc01.local'
   port: '1517'
   protocol: 'tcp'
   api_port: '55000'
-  api_proto: 'https'
-  api_user: 'admin'
-  api_pass: 'changeme'
+  api_pass: 'FNYJc9D%WenMeb'
 os_ossec_agent_authd: # WAZUH代理注册参数。
   address: 'demo-prd-infra-hids-ossec-master.service.dc01.local'
   authd_pass: 'Bf6vJRT4WaEAHq'
