--- a/vars/main.yml
+++ b/vars/main.yml
@@ -28,6 +28,7 @@ os_linux_kernel_parameters: # 内核参数。
   net.ipv4.tcp_syncookies: '1'
   net.ipv4.tcp_tw_recycle: '0'
   net.ipv4.tcp_tw_reuse: '1'
+  net.ipv4.tcp_timestamps: '0'
   net.ipv4.tcp_window_scaling: '0'
   net.ipv6.conf.all.disable_ipv6: '{% if os_disable_ipv6 %}1{% else %}0{% endif %}'
 
