--- a/tasks/OSSec/Win32NT/configureation.yml
+++ b/tasks/OSSec/Win32NT/configureation.yml
@@ -63,7 +63,7 @@
   when: ossec_correct_version is not defined
 
 - name: Register windows OSSEC agent
-  win_command: '"C:\Program Files (x86)\ossec-agent\agent-auth.exe" -A {{ inventory_hostname | upper }} -m {{ os_ossec_agent_authd.address }} -p {{ os_ossec_agent_authd.port }} -P {{ os_ossec_agent_authd.authd_pass }} -G default,{{ group_names[-1] | upper | regex_replace("_", "-") }}'
+  win_command: '"C:\Program Files (x86)\ossec-agent\agent-auth.exe" -A {{ ansible_hostname | lower }} -m {{ os_ossec_agent_authd.address }} -p {{ os_ossec_agent_authd.port }} -P {{ os_ossec_agent_authd.authd_pass }} -G default,{{ group_names[-1] | upper | regex_replace("_", "-") }}'
   register: ossec_agent_auth_output
   changed_when: false
   failed_when: false
