modified:   README.md 	modified:   defaults/main.yml 	modified:   tasks/Beats/Linux.yml

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -73,7 +73,8 @@ os_win_tz: 'China Standard Time' # 主机时区。
 os_win_unicode: 'zh-CN' # 主机字符集编码。
 
 # 网络包流量分析参数 #
-os_packetbeat_version: '7.9.3' # Packetbeat 版本。
+os_packetbeat_version: '7.10.2' # Packetbeat 版本。
+os_packetbeat_dist: 'basic' # 定义Beats发行版本，oss或者basic。
 os_packetbeat_output: # Packetbeat 数据收集器参数。
   type: 'elasticsearch'
   host: '{{ os_syslog_server }}'
@@ -134,7 +135,8 @@ os_pass_maxAge: '60' # Windows主机账户密码有效期。
 # 审计参数 #
 os_audit: false # 是否启用主机审计。
 os_audit_type: 'auditbeat' # 审计进程服务类型，auditbeat 或 auditd。
-os_auditbeat_version: '7.9.3' # Beats 版本。
+os_auditbeat_version: '7.10.2' # Beats 版本。
+os_auditbeat_dist: 'basic' # 定义Beats发行版本，oss或者basic。
 os_auditbeat_output: # Auditbeat 数据收集器参数。
   type: 'elasticsearch'
   host: '{{ os_syslog_server }}'
