--- a/tasks/Software/Linux.yml
+++ b/tasks/Software/Linux.yml
@@ -1,5 +1,5 @@
 ---
-- name: Include tasks for specific OS
+- name: Include tasks for specific OS.
   include: '{{ ansible_os_family }}.yml'
 
 - name: Install OS dependence python package.
@@ -14,7 +14,7 @@
   delay: 2
   when: not ansible_distribution_major_version | int == 6
 
-- name: Ensure update status file
+- name: Ensure update status file.
   copy:
     src: 'bootstrap_Software.Succeed'
     dest: '/etc/bootstrap_Software.Succeed'
