--- a/tasks/Config/Linux/RedHat/7/Grub.yml
+++ b/tasks/Config/Linux/RedHat/7/Grub.yml
@@ -2,8 +2,8 @@
 - name: Update Grub default config
   replace:
     dest: '/etc/default/grub'
-    regexp: 'quiet'
-    replace: "{{ os_linux_grub_add_args | join(' ') }}"
+    regexp: "net.ifnames=0"
+    replace: "net.ifnames=0 {{ os_linux_grub_add_args | join(' ') }}"
   notify: Generate RHEL7 new grub config
   register: grub
   when: os_linux_grub_add_args is defined
