--- a/tasks/Beats/Linux.yml
+++ b/tasks/Beats/Linux.yml
@@ -12,10 +12,10 @@
     beats_output_https: '{{ os_auditbeat_output.https | default(false) | bool }}'
     beats_output_host: '{{ os_auditbeat_output.host }}'
     beats_output_port: '{{ os_auditbeat_output.port }}'
-    beats_kibana_host: '{{ os_auditbeat_output.kibana_host | default("") }}'
-    beats_kibana_port: '{{ os_auditbeat_output.kibana_port | default("") }}'
-    beats_output_user: '{{ os_auditbeat_output.user | default("") }}'
-    beats_output_pass: '{{ os_auditbeat_output.pass | default("") }}'
+    beats_kibana_host: '{{ os_auditbeat_output.host }}'
+    beats_kibana_port: '{{ os_auditbeat_output.kibana_port }}'
+    beats_output_user: '{{ os_auditbeat_output.user }}'
+    beats_output_pass: '{{ os_auditbeat_output.pass }}'
     auditbeat_audit_rules: '{{ os_linux_audit_rules }}'
   when:
     - os_harden | bool
@@ -35,10 +35,10 @@
     beats_output_https: '{{ os_packetbeat_output.https | default(false) | bool }}'
     beats_output_host: '{{ os_packetbeat_output.host }}'
     beats_output_port: '{{ os_packetbeat_output.port }}'
-    beats_kibana_host: '{{ os_packetbeat_output.kibana_host | default("") }}'
-    beats_kibana_port: '{{ os_packetbeat_output.kibana_port | default("") }}'
-    beats_output_user: '{{ os_packetbeat_output.user | default("") }}'
-    beats_output_pass: '{{ os_packetbeat_output.pass | default("") }}'
+    beats_kibana_host: '{{ os_packetbeat_output.host }}'
+    beats_kibana_port: '{{ os_packetbeat_output.kibana_port }}'
+    beats_output_user: '{{ os_packetbeat_output.user }}'
+    beats_output_pass: '{{ os_packetbeat_output.pass }}'
     packetbeat_flows: '{{ os_packetbeat_flows | bool }}'
     packetbeat_protocols: '{{ os_packetbeat_protocols }}'
     packetbeat_ignore_outgoing: '{{ os_packetbeat_ignore_outgoing | bool }}'
