modified:   README.md 	modified:   defaults/main.yml 	modified:   handlers/main.yml 	modified:   tasks/Config/Linux.yml 	modified:   tasks/Config/Linux/RedHat/6/Grub.yml 	modified:   tasks/Config/Linux/RedHat/7/Grub.yml 	new file:   tasks/Directory/Linux.yml 	new file:   tasks/Directory/Linux/RedHat.yml 	new file:   tasks/Directory/Win32NT/register.yml 	modified:   tasks/main.yml 	new file:   templates/sudoers.j2 	modified:   vars/RedHat.yml

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,9 @@
 ---
 - include: 'RedHat.yml'
   when: ansible_os_family == 'RedHat'
+
+- name: Restart the linux host.
+  shell: sleep 2 && /sbin/shutdown -r now "Ansible system required"
+  async: 1
+  poll: 0
+  ignore_errors: true
