--- a/tasks/Harden/Linux/RedHat/Security.yml
+++ b/tasks/Harden/Linux/RedHat/Security.yml
@@ -36,6 +36,11 @@
     - { regexp: '^PrintMotd', line: 'PrintMotd no' }
     - { regexp: '^PrintLastLog', line: 'PrintLastLog no' }
     - { regexp: '^Subsystem', line: 'Subsystem sftp internal-sftp -f AUTHPRIV -l VERBOSE' }
+    - { regexp: '^KexAlgorithms', line: 'KexAlgorithms curve25519-sha256,curve25519-sha256@libssh.org,diffie-hellman-group14-sha256,diffie-hellman-group16-sha512,diffie-hellman-group18-sha512,ecdh-sha2-nistp521,ecdh-sha2-nistp384,ecdh-sha2-nistp256,diffie-hellman-group-exchange-sha256' }
+    - { regexp: '^UsePAM', line: 'UsePAM yes' }
+    - { regexp: '^AllowTcpForwarding', line: 'AllowTcpForwarding no' }
+    - { regexp: '^MaxStartups', line: 'MaxStartups 10:30:60' }
+    - { regexp: '^MaxSessions', line: 'MaxSessions 10' }
   register: result
 
 - name: Disable root login
