--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -159,6 +159,11 @@ os_linux_audit_rules: # Linux 审计规则
   - '-a always,exit -F arch=b32 -S mount -k mounts'
   - '-a always,exit -F arch=b64 -S sethostname -S setdomainname -k system-locale'
   - '-a always,exit -F arch=b32 -S sethostname -S setdomainname -k system-locale'
+  - '-a always,exit -F arch=b64 -S adjtimex -S settimeofday -k time-change'
+  - '-a always,exit -F arch=b32 -S adjtimex -S settimeofday -S stime -k time-change'
+  - '-a always,exit -F arch=b64 -S clock_settime -k time-change'
+  - '-a always,exit -F arch=b32 -S clock_settime -k time-change'
+  - '-w /etc/localtime -p wa -k time-change'
   - '-w /etc/issue -p wa -k system-locale'
   - '-w /etc/issue.net -p wa -k system-locale'
   - '-w /etc/hosts -p wa -k system-locale'
@@ -171,6 +176,10 @@ os_linux_audit_rules: # Linux 审计规则
   - '-w /etc/gshadow -p wa -k identity'
   - '-w /etc/shadow -p wa -k identity'
   - '-w /etc/security/opasswd -p wa -k identity'
+  - '-w /etc/selinux/ -p wa -k MAC-policy'
+  - '-w /usr/share/selinux/ -p wa -k MAC-policy'
+  - '-w /var/log/lastlog -p wa -k logins'
+  - '-w /var/run/utmp -p wa -k session'
   - '-a exclude,always -F msgtype=CWD'
   - '-a exclude,always -F msgtype=EOE'
   - '-a never,exit -F dir=/tmp -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
@@ -191,6 +200,7 @@ os_linux_disable_fs_vartmp_exec: false # /var/tmp 挂载点分区是否启用安
 os_linux_disable_RootLogin: true # 是否禁用root登录。
 os_linux_disable_selinux: false # 是否禁用selinux。
 os_linux_disable_unused_module: false # 是否禁用不需要的模块。
+os_linux_restrictive_file: false # 是否确保关键系统文件权限限制。
 os_linux_user_pw: # 密码复杂度策略。
   minlen: '{{ os_pass_length | default(12) }}'
   dcredit: '-1'
