--- a/tasks/Harden/Linux/Permissions.yml
+++ b/tasks/Harden/Linux/Permissions.yml
@@ -1,10 +1,10 @@
 ---
-- name: Ensure file permissions are configured
+- name: Ensure file permissions are configured.
   file:
-    path: '{{ item }}'
+    path: '{{ item.file }}'
     owner: 'root'
     group: 'root'
-    mode: '0600'
+    mode: '{{ item.mode }}'
   loop: '{{ os_linux_protected_file}}'
   changed_when: false
   failed_when: false
