--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -98,6 +98,7 @@ os_unload_module_RedHat: # 不需要的模块。
 #  - 'vfat' # for EFI
   - 'dccp'
   - 'rds'
+  - 'sctp'
   - 'squashfs'
   - 'tipc'
 
@@ -158,6 +159,8 @@ os_remove_packages_RedHat_7: # 版本7需要删除的系统组件。
   - 'iwl7260-firmware'
   - 'iwl7265-firmware'
   - 'microcode_ctl'
+  - 'iptables-services'
+  - 'nftables'
 
 os_base_packages_RedHat_6: # 版本6需要安装的系统组件。
   - '@Base'
@@ -194,10 +197,19 @@ os_remove_packages_RedHat_6: # 版本6需要删除的系统组件。
   - 'microcode_ctl'
 
 os_linux_protected_file: # 需要限制权限的系统文件。
-  - '/boot/grub2/grub.cfg'
-  - '/etc/cron.d'
-  - '/etc/cron.daily'
-  - '/etc/cron.hourly'
-  - '/etc/cron.monthly'
-  - '/etc/cron.weekly'
-  - '/etc/crontab'
+  - { file: '/boot/grub2/grub.cfg', mode: '0600' }
+  - { file: '/etc/cron.d', mode: '0600' }
+  - { file: '/etc/cron.daily', mode: '0600' }
+  - { file: '/etc/cron.hourly', mode: '0600' }
+  - { file: '/etc/cron.monthly', mode: '0600' }
+  - { file: '/etc/cron.weekly', mode: '0600' }
+  - { file: '/etc/crontab', mode: '0600' }
+  - { file: '/etc/group', mode: '0644' }
+  - { file: '/etc/group-', mode: '0644' }
+  - { file: '/etc/gshadow', mode: '0000' }
+  - { file: '/etc/gshadow-', mode: '0000' }
+  - { file: '/etc/passwd', mode: '0644' }
+  - { file: '/etc/passwd-', mode: '0644' }
+  - { file: '/etc/shadow', mode: '0000' }
+  - { file: '/etc/shadow-', mode: '0000' }
+  - { file: '/etc/ssh/sshd_config', mode: '0600' }
