--- a/tasks/Beats/Linux.yml
+++ b/tasks/Beats/Linux.yml
@@ -14,6 +14,7 @@
     beats_output_port: '{{ os_auditbeat_output.port }}'
     beats_kibana_host: '{{ os_auditbeat_output.host }}'
     beats_kibana_port: '{{ os_auditbeat_output.kibana_port }}'
+    beats_dashboard: '{{ os_auditbeat_output.kibana_dashboard | default(false) | bool }}'
     beats_output_user: '{{ os_auditbeat_output.user }}'
     beats_output_pass: '{{ os_auditbeat_output.pass }}'
     auditbeat_audit_rules: '{{ os_linux_audit_rules }}'
@@ -37,6 +38,7 @@
     beats_output_port: '{{ os_packetbeat_output.port }}'
     beats_kibana_host: '{{ os_packetbeat_output.host }}'
     beats_kibana_port: '{{ os_packetbeat_output.kibana_port }}'
+    beats_dashboard: '{{ os_packetbeat_output.kibana_dashboard | default(false) | bool }}'
     beats_output_user: '{{ os_packetbeat_output.user }}'
     beats_output_pass: '{{ os_packetbeat_output.pass }}'
     packetbeat_flows: '{{ os_packetbeat_flows | bool }}'
