modified:   defaults/main.yml 	modified:   tasks/Exporter/Linux.yml 	modified:   tasks/Exporter/Linux/node.yml 	modified:   tasks/Exporter/Win32NT.yml 	modified:   templates/scripts/Linux/os_info.j2 	modified:   templates/scripts/Win32NT/os_info.j2 	modified:   vars/Windows.yml

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -275,11 +275,20 @@ os_wmi_exporter_collector: # 普罗米修斯客户端收集器。
   - 'system'
   - 'tcp'
   - 'textfile'
+  - 'time'
 #  - 'ad'
+#  - 'adfs'
+#  - 'cache'
+#  - 'cpu_info'
 #  - 'container'
+#  - 'dfsr'
+#  - 'dhcp'
 #  - 'dns'
+#  - 'exchange'
+#  - 'fsrmquota'
 #  - 'hyperv'
 #  - 'iis'
+#  - 'logon'
 #  - 'msmq'
 #  - 'mssql'
 #  - 'netframework_clrexceptions'
@@ -291,7 +300,10 @@ os_wmi_exporter_collector: # 普罗米修斯客户端收集器。
 #  - 'netframework_clrremoting'
 #  - 'netframework_clrsecurity'
 #  - 'process'
+#  - 'remote_fx'
+#  - 'smtp'
 #  - 'thermalzone'
+#  - 'terminal_services'
 #  - 'vmware'
 os_wmi_exporter_extra_collector: '--collector.service.services-where="Name=''nxlog''"'
 # Linux 普罗米修斯客户端参数 #
