--- a/vars/Windows.yml
+++ b/vars/Windows.yml
@@ -13,7 +13,7 @@ os_win_misc_role: # 杂项策略。
   - { path: 'HKLM:\SOFTWARE\Policies\Microsoft\Windows\WindowsUpdate\AU', name: 'NoAutoUpdate', data: '1', type: 'dword', create: "{{ os_win_disable_autoupdate }}" }
   - { path: 'HKCU:\SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\Advanced', name: 'HideFileExt', data: '0', type: 'dword', create: "{{ os_win_disable_hidefileext }}" }
 
-os_wmi_exporter_software: 'prometheus-wmi-exporter.install'
+os_wmi_exporter_software: 'prometheus-windows-exporter.install'
 os_wmi_exporter_collector_scripts:
   - 'os_info'
 
